// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Textarea Snapshots should match snapshot when disabled 1`] = `
<div
  class=""
>
  <label
    class="block text-sm font-medium text-neutral-700 mb-1.5"
    for="_r_17_"
  >
    Disabled
  </label>
  <textarea
    aria-invalid="false"
    class="w-full border rounded-md transition-colors focus:outline-none focus:ring-2 focus:ring-offset-2 resize-y px-4 py-2 text-base border-neutral-300 focus:ring-primary-500 focus:border-primary-500 bg-neutral-100 text-neutral-500 cursor-not-allowed "
    disabled=""
    id="_r_17_"
    rows="4"
  />
</div>
`;

exports[`Textarea Snapshots should match snapshot when required 1`] = `
<div
  class=""
>
  <label
    class="block text-sm font-medium text-neutral-700 mb-1.5"
    for="_r_1a_"
  >
    Required
    <span
      aria-label="required"
      class="text-destructive-600 ml-1"
    >
      *
    </span>
  </label>
  <textarea
    aria-invalid="false"
    class="w-full border rounded-md transition-colors focus:outline-none focus:ring-2 focus:ring-offset-2 resize-y px-4 py-2 text-base border-neutral-300 focus:ring-primary-500 focus:border-primary-500 bg-white text-neutral-900 "
    id="_r_1a_"
    required=""
    rows="4"
  />
</div>
`;

exports[`Textarea Snapshots should match snapshot with custom rows 1`] = `
<div
  class=""
>
  <label
    class="block text-sm font-medium text-neutral-700 mb-1.5"
    for="_r_1d_"
  >
    Large
  </label>
  <textarea
    aria-invalid="false"
    class="w-full border rounded-md transition-colors focus:outline-none focus:ring-2 focus:ring-offset-2 resize-y px-4 py-2 text-base border-neutral-300 focus:ring-primary-500 focus:border-primary-500 bg-white text-neutral-900 "
    id="_r_1d_"
    rows="10"
  />
</div>
`;

exports[`Textarea Snapshots should match snapshot with default props 1`] = `
<div
  class=""
>
  <label
    class="block text-sm font-medium text-neutral-700 mb-1.5"
    for="_r_16_"
  >
    Comments
  </label>
  <textarea
    aria-invalid="false"
    class="w-full border rounded-md transition-colors focus:outline-none focus:ring-2 focus:ring-offset-2 resize-y px-4 py-2 text-base border-neutral-300 focus:ring-primary-500 focus:border-primary-500 bg-white text-neutral-900 "
    id="_r_16_"
    rows="4"
  />
</div>
`;

exports[`Textarea Snapshots should match snapshot with error 1`] = `
<div
  class=""
>
  <label
    class="block text-sm font-medium text-neutral-700 mb-1.5"
    for="_r_18_"
  >
    Description
  </label>
  <textarea
    aria-describedby="_r_18_-error"
    aria-invalid="true"
    class="w-full border rounded-md transition-colors focus:outline-none focus:ring-2 focus:ring-offset-2 resize-y px-4 py-2 text-base border-destructive-500 focus:ring-destructive-500 focus:border-destructive-500 bg-white text-neutral-900 "
    id="_r_18_"
    rows="4"
  />
  <p
    class="mt-1.5 text-sm text-destructive-600"
    id="_r_18_-error"
    role="alert"
  >
    Description is required
  </p>
</div>
`;

exports[`Textarea Snapshots should match snapshot with help text 1`] = `
<div
  class=""
>
  <label
    class="block text-sm font-medium text-neutral-700 mb-1.5"
    for="_r_19_"
  >
    Bio
  </label>
  <textarea
    aria-describedby="_r_19_-help"
    aria-invalid="false"
    class="w-full border rounded-md transition-colors focus:outline-none focus:ring-2 focus:ring-offset-2 resize-y px-4 py-2 text-base border-neutral-300 focus:ring-primary-500 focus:border-primary-500 bg-white text-neutral-900 "
    id="_r_19_"
    rows="4"
  />
  <p
    class="mt-1.5 text-sm text-neutral-600"
    id="_r_19_-help"
  >
    Tell us about yourself
  </p>
</div>
`;

exports[`Textarea Snapshots should match snapshot with placeholder 1`] = `
<div
  class=""
>
  <label
    class="block text-sm font-medium text-neutral-700 mb-1.5"
    for="_r_1c_"
  >
    Comments
  </label>
  <textarea
    aria-invalid="false"
    class="w-full border rounded-md transition-colors focus:outline-none focus:ring-2 focus:ring-offset-2 resize-y px-4 py-2 text-base border-neutral-300 focus:ring-primary-500 focus:border-primary-500 bg-white text-neutral-900 "
    id="_r_1c_"
    placeholder="Enter your comments here"
    rows="4"
  />
</div>
`;

exports[`Textarea Snapshots should match snapshot with value 1`] = `
<div
  class=""
>
  <label
    class="block text-sm font-medium text-neutral-700 mb-1.5"
    for="_r_1b_"
  >
    Notes
  </label>
  <textarea
    aria-invalid="false"
    class="w-full border rounded-md transition-colors focus:outline-none focus:ring-2 focus:ring-offset-2 resize-y px-4 py-2 text-base border-neutral-300 focus:ring-primary-500 focus:border-primary-500 bg-white text-neutral-900 "
    id="_r_1b_"
    readonly=""
    rows="4"
  >
    Some notes here
  </textarea>
</div>
`;
